# Internship_copilot

./: README.md  internship_copilot.db  pyproject.toml
app/: main.py
app/api/: deps.py
app/api/routes/: internships.py  profiles.py
app/core/: config.py  exceptions.py
app/db/: base.py  session.py
app/extraction/: skill_catalog.py  skill_extractor.py
app/ingestion/: page_loader.py  text_cleaner.py
app/models/: internship.py  profile.py
app/repositories/: internship_repository.py  profile_repository.py
app/schemas/: analysis.py  internship.py  profile.py
app/services/: internship_ingestion_service.py  matching_service.py  profile_service.py
internship_copilot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: init_db.py
tests/: session_tests_for_insertion_query.py  test_extraction.py  test_for_services.py  test_uvicorn_url.txt  tests_for_ingestion.py
