[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "internship-copilot"
version = "0.1.0"
description = "Backend API for the Internship Copilot project."
authors = [
	{name = "Pengbao Zhou", email = "pengbao001@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn>=0.35,<1.0",
  "pydantic-settings>=2.0,<3.0",
  "sqlalchemy>=2.0,<3.0",
  "httpx>=0.28,<1.0",
  "beautifulsoup4>=4.13,<5.0",
  "pypdf>=6.0,<7.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1.0",
  "pytest>=8.0,<9.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]